--- a/index.html
+++ b/index.html
@@ -1,10 +1,382 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Ivy Photography</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- main.css file -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="normalize.css"
+    />
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <!-- Social Media icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Lora"
+      rel="stylesheet"
+    />
+    <!-- bootstrap -->
+    <!-- css  -->
+    <!--import bootstrap -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
   </head>
+  <!-- HTML BODY! -->
   <body>
-    <h1>Hello World!</h1>
+    <header>
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top">
+        <div class="container">
+          <a class="navbar-brand" href="#"
+            ><img
+              src="images/logo.png"
+              class="img-fluid
+          ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}"
+              alt="Ivy Photography logo"
+              width="125px;"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarCollapse"
+            aria-controls="navbarCollapse"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#Top"
+                  >Home <span class="sr-only">(current)</span></a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#About">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#Contact">Contact</a>
+              </li>
+            </ul>
+            <!-- Social Media -->
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a href="#" class="fa fa-facebook"></a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="fa fa-instagram"></a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="fa fa-twitter"></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <main role="main">
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              class="d-block w-100"
+              src="images/stock1.jpg"
+              alt="First slide"
+            />
+            <div class="container">
+              <div class="carousel-caption text-left">
+                <h1>SoCal Photographer</h1>
+                <p>
+                  Pro photgrapher
+                </p>
+                <p>
+                  <a class="btn btn-lg btn-primary" href="#" role="button"></a>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100"
+              src="images/stock2.jpg"
+              alt="First slide"
+            />
+            <div class="container">
+              <div class="carousel-caption">
+                <h1>Another example headline.</h1>
+                <p>
+                  Cras justo odio, dapibus ac facilisis in, egestas eget quam.
+                  Donec id elit non mi porta gravida at eget metus. Nullam id
+                  dolor id nibh ultricies vehicula ut id elit.
+                </p>
+                <p>
+                  <a class="btn btn-lg btn-primary" href="#" role="button"
+                    >Learn more</a
+                  >
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100"
+              src="images/stock3.jpg"
+              alt="First slide"
+            />
+            <div class="container">
+              <div class="carousel-caption text-right">
+                <h1>One more for good measure.</h1>
+                <p>
+                  Cras justo odio, dapibus ac facilisis in, egestas eget quam.
+                  Donec id elit non mi porta gravida at eget metus. Nullam id
+                  dolor id nibh ultricies vehicula ut id elit.
+                </p>
+                <p>
+                  <a class="btn btn-lg btn-primary" href="#" role="button"
+                    >Browse gallery</a
+                  >
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <a
+          class="carousel-control-prev"
+          href="#myCarousel"
+          role="button"
+          data-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a
+          class="carousel-control-next"
+          href="#myCarousel"
+          role="button"
+          data-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+
+      <!-- Marketing messaging and featurettes
+          ================================================== -->
+      <!-- Wrap the rest of the page in another container to center all the content. -->
+
+      <div class="container marketing">
+        <!-- Three columns of text below the carousel -->
+        <div class="row">
+          <div class="col-lg-4">
+            <img
+              src="images/wedding.jpg"
+              class="img-fluid imgMarketing"
+              alt=""
+            />
+            <h2>Weddings</h2>
+            <p>
+              Each event is captured with care, love, thoughfulness and attetion
+              to detail no matter the destination.
+            </p>
+            <!-- <p>
+              <a class="btn btn-secondary" href="#" role="button"
+                >View details &raquo;</a
+              >
+            </p> -->
+          </div>
+          <!-- /.col-lg-4 -->
+          <div class="col-lg-4">
+            <img
+              src="images/portrait.jpg"
+              class="img-fluid imgMarketing"
+              alt=""
+            />
+            <h2>Portaits</h2>
+            <p>
+              No matter if it is a family or a business portaits. We'll have fun
+              taking meroable photgraphs.
+            </p>
+          </div>
+          <!-- /.col-lg-4 -->
+          <div class="col-lg-4">
+            <img
+              src="images/engagment.jpg"
+              class="img-fluid imgMarketing"
+              alt=""
+            />
+            <h2>Engagements</h2>
+            <p>
+              <!-- Engangment sessions are perfect opportunity for us to get to know
+              each other before the big day. The added benefit is being familar
+              and more comfortable on the wedding day. Therefore, leading to
+              more beautiful photographs.  -->
+              Every engamnet sessions is carefully planed with my clients to
+              curate the perfect experince. For instance, attire, hair, makeup,
+              location and other special detials.
+            </p>
+          </div>
+          <!-- /.col-lg-4 -->
+        </div>
+        <!-- /.row -->
+
+        <!-- START THE FEATURETTES -->
+
+        <hr class="featurette-divider" id="About" />
+        <div class="row featurette">
+          <div class="col-md-7">
+            <h2 class="featurette-heading">
+              First featurette heading.
+              <span class="text-muted">It’ll blow your mind.</span>
+            </h2>
+            <p class="lead">
+              Hi there, I am Ivette. <br />
+              A photographer located in San Diego, Ca. I have been a
+              photographer for 10 years. Experince in shooting blah Lorem ipsum
+              dolor sit amet consectetur adipisicing elit. Qui, optio nemo.
+            </p>
+          </div>
+          <div class="col-md-5">
+            <img
+              src="images/photographer.jpg"
+              class="img-fluid"
+              alt="Photo of Ivy"
+            />
+          </div>
+        </div>
+
+        <hr class="featurette-divider" />
+
+        <div class="row featurette">
+          <div class="col-md-7 order-md-2">
+            <h2 class="featurette-heading">
+              Oh yeah, it’s that good.
+              <span class="text-muted">See for yourself.</span>
+            </h2>
+            <p class="lead">
+              Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id
+              ligula porta felis euismod semper. Praesent commodo cursus magna,
+              vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
+              commodo.
+            </p>
+          </div>
+          <div class="col-md-5 order-md-1">
+            <img class="img-fluid" src="/images/edit.jpeg" alt="" />
+          </div>
+        </div>
+
+        <hr class="featurette-divider" id="Contact" />
+
+        <div class="row featurette">
+          <div class="col-md-7">
+            <h2 class="featurette-heading">
+              Contact Me
+            </h2>
+            <form action="#">
+              <div class="form-group">
+                <label for="form_name">First Name</label>
+                <input
+                  for="form_name"
+                  type="text"
+                  name="name"
+                  placeholder="first name"
+                  required="required"
+                  data-error="First name is required."
+                />
+              </div>
+              <div class="form-group">
+                <label for="form_name">Last Name</label>
+                <input
+                  for="form_name"
+                  type="text"
+                  name="name"
+                  placeholder="last name"
+                  required="required"
+                  data-error="Last name is required."
+                />
+              </div>
+              <div class="form-group">
+                <label for="form_email">Email</label>
+                <input
+                  id="form_email"
+                  type="email"
+                  name="email"
+                  class="form-control"
+                  placeholder="Please enter your email"
+                  required="required"
+                  data-error="Valid email is required."
+                />
+                <div class="help-block with-errors"></div>
+                <div class="form-group">
+                  <label for="form_message">Message</label>
+                  <textarea
+                    id="form_message"
+                    name="message"
+                    class="form-control"
+                    placeholder="Message for me"
+                    rows="4"
+                    required="required"
+                    data-error="Please, leave us a message."
+                  ></textarea>
+                  <div class="help-block with-errors"></div>
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="col-md-5">
+            <img
+              class="img-fluid"
+              src="images/contact.jpg"
+              alt="Holding coffee filing out contact form"
+            />
+          </div>
+        </div>
+
+        <hr class="featurette-divider" />
+
+        <!-- /END THE FEATURETTES -->
+      </div>
+      <!-- /.container -->
+
+      <!-- FOOTER -->
+      <footer class="container">
+        <p>
+          &copy; 2019 All rights reserved &middot;
+        </p>
+      </footer>
+    </main>
   </body>
 </html>
