--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       type="text/css"
       media="screen"
-      href="normalize.css"
+      href="/normalize.css"
     />
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <!-- Social Media icons -->
@@ -114,7 +114,7 @@
           <div class="carousel-item active">
             <img
               class="d-block w-100"
-              src="images/stock1.jpg"
+              src="/images/stock1.jpg"
               alt="First slide"
             />
             <div class="container">
@@ -132,7 +132,7 @@
           <div class="carousel-item">
             <img
               class="d-block w-100"
-              src="images/stock2.jpg"
+              src="/images/stock2.jpg"
               alt="First slide"
             />
             <div class="container">
@@ -154,7 +154,7 @@
           <div class="carousel-item">
             <img
               class="d-block w-100"
-              src="images/stock3.jpg"
+              src="/images/stock3.jpg"
               alt="First slide"
             />
             <div class="container">
@@ -203,7 +203,7 @@
         <div class="row">
           <div class="col-lg-4">
             <img
-              src="images/wedding.jpg"
+              src="/images/wedding.jpg"
               class="img-fluid imgMarketing"
               alt=""
             />
@@ -221,7 +221,7 @@
           <!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img
-              src="images/portrait.jpg"
+              src="/images/portrait.jpg"
               class="img-fluid imgMarketing"
               alt=""
             />
@@ -234,7 +234,7 @@
           <!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img
-              src="images/engagment.jpg"
+              src="/images/engagment.jpg"
               class="img-fluid imgMarketing"
               alt=""
             />
@@ -271,7 +271,7 @@
           </div>
           <div class="col-md-5">
             <img
-              src="images/photographer.jpg"
+              src="/images/photographer.jpg"
               class="img-fluid"
               alt="Photo of Ivy"
             />
@@ -346,10 +346,10 @@
                     id="form_message"
                     name="message"
                     class="form-control"
-                    placeholder="Message for me"
+                    placeholder="How can I help?"
                     rows="4"
                     required="required"
-                    data-error="Please, leave us a message."
+                    data-error="Please, leave me a message."
                   ></textarea>
                   <div class="help-block with-errors"></div>
                 </div>
@@ -359,7 +359,7 @@
           <div class="col-md-5">
             <img
               class="img-fluid"
-              src="images/contact.jpg"
+              src="/images/contact.jpg"
               alt="Holding coffee filing out contact form"
             />
           </div>
