fixed typos added submit button to contact form

--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
             />
             <h2>Weddings</h2>
             <p>
-              Each event is captured with care, love, thoughfulness and attetion
-              to detail no matter the destination.
+              Each event is captured with care, love, thoughtfulness and
+              attention to detail no matter the destination.
             </p>
             <!-- <p>
               <a class="btn btn-secondary" href="#" role="button"
@@ -225,10 +225,10 @@
               class="img-fluid imgMarketing"
               alt=""
             />
-            <h2>Portaits</h2>
+            <h2>Portraits</h2>
             <p>
-              No matter if it is a family or a business portaits. We'll have fun
-              taking meroable photgraphs.
+              No matter if it is a family or a business portraits. We'll have
+              fun taking memorable photographs.
             </p>
           </div>
           <!-- /.col-lg-4 -->
@@ -244,9 +244,9 @@
               each other before the big day. The added benefit is being familar
               and more comfortable on the wedding day. Therefore, leading to
               more beautiful photographs.  -->
-              Every engamnet sessions is carefully planed with my clients to
-              curate the perfect experince. For instance, attire, hair, makeup,
-              location and other special detials.
+              Every engagement session is carefully planed with my clients to
+              curate the perfect experience. For instance attire, hair, makeup,
+              location and other special details.
             </p>
           </div>
           <!-- /.col-lg-4 -->
@@ -264,9 +264,9 @@
             </h2>
             <p class="lead">
               Hi there, I am Ivette. <br />
-              A photographer located in San Diego, Ca. I have been a
-              photographer for 10 years. Experince in shooting blah Lorem ipsum
-              dolor sit amet consectetur adipisicing elit. Qui, optio nemo.
+              A photographer located in San Diego, Ca. Have been passionate
+              about photographer for over ten years. Interested in capturing
+              memorable events in an image.
             </p>
           </div>
           <div class="col-md-5">
@@ -298,6 +298,7 @@
           </div>
         </div>
 
+        <!---- CONTACT FORM ---->
         <hr class="featurette-divider" id="Contact" />
 
         <div class="row featurette">
@@ -305,9 +306,9 @@
             <h2 class="featurette-heading">
               Contact Me
             </h2>
-            <form action="#">
+            <form action="contact.php" class="contact-me">
               <div class="form-group">
-                <label for="form_name">First Name</label>
+                <label for="form_name">First name</label>
                 <input
                   for="form_name"
                   type="text"
@@ -318,7 +319,7 @@
                 />
               </div>
               <div class="form-group">
-                <label for="form_name">Last Name</label>
+                <label for="form_name">Last name</label>
                 <input
                   for="form_name"
                   type="text"
@@ -339,21 +340,22 @@
                   required="required"
                   data-error="Valid email is required."
                 />
-                <div class="help-block with-errors"></div>
-                <div class="form-group">
-                  <label for="form_message">Message</label>
-                  <textarea
-                    id="form_message"
-                    name="message"
-                    class="form-control"
-                    placeholder="How can I help?"
-                    rows="4"
-                    required="required"
-                    data-error="Please, leave me a message."
-                  ></textarea>
-                  <div class="help-block with-errors"></div>
-                </div>
               </div>
+              <div class="help-block with-errors"></div>
+              <div class="form-group">
+                <label for="form_message">Message</label>
+                <textarea
+                  placeholder="How can I help?"
+                  id="form_message"
+                  name="message"
+                  class="form-control"
+                  rows="4"
+                  required="required"
+                  data-error="Please, leave me a message."
+                ></textarea>
+                <div class="help-block with-errors"></div>
+              </div>
+              <input class="submit-btn" type="submit" value="Submit" />
             </form>
           </div>
           <div class="col-md-5">
