--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 
         <div class="row featurette">
           <div class="col-md-7">
-            <h2 class="featurette-heading">
+            <h2 class="featurette-heading contact-header">
               Contact Me
             </h2>
             <form action="contact.php" class="contact-me">
